jakarta fonts successfully added

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
+    "expo": "^50.0.17",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6"
