--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/config-plugins": "~8.0.0",
     "@expo/prebuild-config": "~7.0.0",
     "@react-native/metro-config": "^0.74.83",
+    "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^51.0.8",
