--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "dotenv": "^16.4.5",
     "expo": "^51.0.8",
+    "expo-constants": "^16.0.2",
     "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
     "expo-splash-screen": "^0.27.4",
@@ -24,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-country-codes-picker": "^2.3.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.10.1",
